@@ -20,6 +20,7 @@ version ? (????-??-??):
   - added option 'big_networks' for hidding some big ISP's specific stuff like 
     e.g. long selection dropdowns (alec)
   - big_networks support in New Ticket (alec)
+  - added public IP searching in node's quicksearch (alec)
 
 version 1.9.3 Zarin (2006-09-19):
 
